--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1,7 +1,5 @@
 {
   "title": "Verlof Calculator",
-  "daysOffAtMaxUwv": "Vrije dagen {'@'} max UWV",
-  "dailySalaryAtMaxUwvDescriptionHtml": "Je krijgt 100% van je normale dagloon betaald, of het <a target=\"_blank\" href=\"{url}\">maximum van het UWV</a> ({maxUwv}), welke het laagste is.",
   "calendarThWeek": "Week",
   "calendarThDate": "Datum",
   "calendarThDaysOffMom": "Vrije dagen moeder",
@@ -31,16 +29,29 @@
   "regulationBirthInfoLinkHtml": "<p>Meer info op <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "regulationAdditionalBirthTitle": "Aanvullende geboorteverlof",
   "regulationAdditionalBirthInfoHtml": "<p>Aanvullend geboorteverlof (voor partners)</p>",
-  "regulationAdditionalBirthInfoListHtml": "<li>5 Weken voor de partner.</li><li>Paid by UWV, at 70% of your normal salary. It\\'s also capped at 70% of the UWV maximum, so it can never be higher than {seventyPercentOfUwvMax} per day.</li>",
+  "regulationAdditionalBirthInfoListHtml": "<li>5 Weken voor de partner.</li><li>Betaald door het UWV, 70% van je normale loon. Nooit hoger dan 70% van het UWV maximum ({seventyPercentOfUwvMax}) per dag.</li>",
   "regulationAdditionalBirthInfoLinkHtml": "<p>Meer info op <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
-  "regulationPaidParentalTitle": "Paid parental leave",
-  "regulationPaidParentalInfoHtml": "<p>Official title: Betaald ouderschapsverlof</p>",
-  "regulationPaidParentalInfoListHtml": "<li>9 Weeks total.</li><li>Valid for both mom and the partner.</li><li>Paid by UWV, at 70% of your normal salary. It\\'s also capped at 70% of the UWV maximum, so it can never be higher than {seventyPercentOfUwvMax} per day.</li><li>Must be used within 1 year of the birth.</li>",
+  "regulationPaidParentalTitle": "Betaald ouderschapsverlof",
+  "regulationPaidParentalInfoHtml": "",
+  "regulationPaidParentalInfoListHtml": "<li>9 Weken.</li><li>Geldig voor zowel moeder als partner.</li><li>Betaald door het UWV, 70% van je normale loon. Nooit hoger dan 70% van het UWV maximum ({seventyPercentOfUwvMax}) per dag.</li><li>Moeten 1 jaar na de geboorte gebruikt worden.</li>",
   "regulationPaidParentalInfoLinkHtml": "<p>Meer info op <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
-  "regulationUnpaidParentalTitle": "Unpaid parental leave",
-  "regulationUnpaidParentalInfoHtml": "<p>Official title: Onbetaald ouderschapsverlof</p>",
-  "regulationUnpaidParentalInfoListHtml": "<li>'17 Weeks total.</li><li>Valid for both mom and the partner.</li><li>Not paid at all.</li>",
+  "regulationUnpaidParentalTitle": "Onbetaald ouderschapsverlof",
+  "regulationUnpaidParentalInfoHtml": "",
+  "regulationUnpaidParentalInfoListHtml": "<li>'17 Weken.</li><li>Geldig voor zowel moeder als partner.</li><li>Volledig onbetaald.</li>",
   "regulationUnpaidParentalInfoLinkHtml": "<p>Meer info op <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "payoutNormalAndMissingMom": "De moeder krijgt {payoutPerDay} per dag, terwijl ze normaal gesproken {normalIncomePerDay} per dag verdient, dus ze krijgt {missedIncomePerDay} minder per dag.",
-  "payoutNormalAndMissingPartner": "De partner krijgt {payoutPerDay} per dag, terwijl hij/zij normaal gesproken {normalIncomePerDay} per dag verdient, dus hij/zij krijgt {missedIncomePerDay} minder per dag."
+  "payoutNormalAndMissingPartner": "De partner krijgt {payoutPerDay} per dag, terwijl hij/zij normaal gesproken {normalIncomePerDay} per dag verdient, dus hij/zij krijgt {missedIncomePerDay} minder per dag.",
+  "financialTitle": "Financieel",
+  "financialThMom": "Moeder",
+  "financialThPartner": "Partner",
+  "financialGrossYearlySalary": "Bruto jaarsalaris",
+  "financialDaysOffFullyPaid": "Vrije dagen volledig betaald",
+  "daysOffAtMaxUwv": "Vrije dagen {'@'} max UWV",
+  "dailySalaryAtMaxUwvDescriptionHtml": "Je krijgt 100% van je normale dagloon betaald, of het <a target=\"_blank\" href=\"{url}\">maximum van het UWV</a> ({maxUwv}), welke het laagste is.",
+  "daysOffAtSeventyPercent": "Vrije dagen 70%",
+  "dailySalaryAtSeventyPercentDescriptionHtml": "Je krijgt 70% van je normale dagloon betaald, of 70% van het maximum van het UWV ({maxUwvSeventy}), welke het laagste is.",
+  "daysOffUnpaid": "Onbetaalde vrije dagen",
+  "daysOffUnpaidMomCost": "Dit kost de moeder {dailySalary} in gemist inkomen per dag.",
+  "daysOffUnpaidPartnerCost": "Dit kost de partner {dailySalary} in gemist inkomen per dag.",
+  "totalGrossMissedIncome": "Totaal bruto gemist inkomen"
 }
