--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -53,5 +53,13 @@
   "daysOffUnpaid": "Days off unpaid",
   "daysOffUnpaidMomCost": "Mom misses out on {dailySalary} per day.",
   "daysOffUnpaidPartnerCost": "The partner misses out on {dailySalary} per day.",
-  "totalGrossMissedIncome": "Total gross missed income"
+  "totalGrossMissedIncome": "Total gross missed income",
+  "analysisMomMoreThanPartner": "Mom is taking {days} more days off than the partner.",
+  "analysisPartnerMoreThanMom": "The partner is taking {days} more days off than mom.",
+  "analysisEqualDays": "Both parents are taking the same amount of days off.",
+  "analysisWeeksOffMom": "Mom is taking {weeks} entire weeks off",
+  "analysisWeeksOffPartner": "The partner is taking {weeks} entire weeks off",
+  "analysisWeeksAndDaysOffMom": "Mom is taking {weeks} entire weeks off, plus on average {days} days per week spread out over {parttimeWeeks} weeks.",
+  "analysisWeeksAndDaysOffPartner": "The partner is taking {weeks} entire weeks off, plus on average {days} days per week spread out over {parttimeWeeks} weeks.",
+  "analysisChildcare": "This year will require {days} days of external childcare."
 }
