--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -54,12 +54,14 @@
   "daysOffUnpaidMomCost": "Dit kost de moeder {dailySalary} in gemist inkomen per dag.",
   "daysOffUnpaidPartnerCost": "Dit kost de partner {dailySalary} in gemist inkomen per dag.",
   "totalGrossMissedIncome": "Totaal bruto gemist inkomen",
-  "analysisMomMoreThanPartner": "Mom is taking {days} more days off than the partner.",
-  "analysisPartnerMoreThanMom": "The partner is taking {days} more days off than mom.",
-  "analysisEqualDays": "Both parents are taking the same amount of days off.",
-  "analysisWeeksOffMom": "Mom is taking {weeks} entire weeks off",
-  "analysisWeeksOffPartner": "The partner is taking {weeks} entire weeks off",
-  "analysisWeeksAndDaysOffMom": "Mom is taking {weeks} entire weeks off, plus on average {days} days per week spread out over {parttimeWeeks} weeks.",
-  "analysisWeeksAndDaysOffPartner": "The partner is taking {weeks} entire weeks off, plus on average {days} days per week spread out over {parttimeWeeks} weeks.",
-  "analysisChildcare": "This year will require {days} days of external childcare."
+  "analysisMomMoreThanPartner": "De moeder neemt {days} meer vrije dagen op dan de partner.",
+  "analysisPartnerMoreThanMom": "De partner neemt {days} meer vrije dagen op dan de moeder.",
+  "analysisEqualDays": "Beide ouders nemen evenveel vrije dagen op.",
+  "analysisWeeksOffMom": "De moeder neemt {weeks} volledige weken vrij.",
+  "analysisWeeksOffPartner": "De partner neemt {weeks} volledige weken vrij.",
+  "analysisWeeksAndDaysOffMom": "De moeder neemt {weeks} volledige weken vrij, plus gemiddeld {days} dagen verspreid over {parttimeWeeks} weken.",
+  "analysisWeeksAndDaysOffPartner": "De partner neemt {weeks} volledige weken vrij, plus gemiddeld {days} dagen verspreid over {parttimeWeeks} weken.",
+  "analysisChildcare": "Dit jaar zijn er {days} dagen kinderopvang nodig.",
+  "analysisTitle": "Analyse",
+  "feedbackHtml": "<h2>Feedback</h2><p>Foutje gevonden? Ideeën ter verbetering?</p><p>Email mij op <a href=\"mailto:thomas@webvalid.nl\">thomas@webvalid.nl</a></p><p>Voor de nerds: verstuur een pull request op <a href=\"https://github.com/Thomas-Kuipers/verlofcalculator\">github.com/Thomas-Kuipers/verlofcalculator</a></p>"
 }
