--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -44,7 +44,6 @@
   "financialTitle": "Financial",
   "financialThMom": "Mom",
   "financialThPartner": "Partner",
-  "financialGrossYearlySalary": "Gross yearly salary",
   "financialDaysOffFullyPaid": "Days off fully paid",
   "daysOffAtMaxUwv": "Days off {'@'} max UWV",
   "dailySalaryAtMaxUwvDescriptionHtml": "You get paid 100% of your daily salary, or the <a target=\"_blank\" href=\"{url}\">maximum of the UWV</a> ({maxUwv}), whichever is less.",
@@ -63,5 +62,12 @@
   "analysisWeeksAndDaysOffPartner": "The partner is taking {weeks} entire weeks off, plus on average {days} days per week spread out over {parttimeWeeks} weeks.",
   "analysisChildcare": "This year will require {days} days of external childcare.",
   "analysisTitle": "Analysis",
-  "feedbackHtml": "<h2>Feedback</h2><p>Notice any mistakes? Any other ideas how to improve this further?</p><p>Email me at <a href=\"mailto:thomas{'@'}webvalid.nl\">thomas{'@'}webvalid.nl</a></p><p>If you're a nerd, you can submit a pull request at <a href=\"https://github.com/Thomas-Kuipers/verlofcalculator\">github.com/Thomas-Kuipers/verlofcalculator</a></p>"
+  "feedbackHtml": "<h2>Feedback</h2><p>Notice any mistakes? Any other ideas how to improve this further?</p><p>Email me at <a href=\"mailto:thomas{'@'}webvalid.nl\">thomas{'@'}webvalid.nl</a></p><p>If you're a nerd, you can submit a pull request at <a href=\"https://github.com/Thomas-Kuipers/verlofcalculator\">github.com/Thomas-Kuipers/verlofcalculator</a></p>",
+  "settingsTitle": "Enter your details here",
+  "settingsGrossYearlySalaryMom": "Gross yearly salary mom",
+  "settingsGrossYearlySalaryPartner": "Gross yearly salary partner",
+  "chartTitle": "Days off comparison",
+  "chartDaysMom": "Mom: {days} days off",
+  "chartDaysPartner": "Partner: {days} days off",
+  "calendarTitle": "Calendar"
 }
