Display which regulations financial rows apply to

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -69,5 +69,6 @@
   "chartTitle": "Days off comparison",
   "chartDaysMom": "Mom: {days} days off",
   "chartDaysPartner": "Partner: {days} days off",
-  "calendarTitle": "Calendar"
+  "calendarTitle": "Calendar",
+  "appliesToRegulations": "Applies to regulations: {regulations}"
 }
