--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -62,7 +62,7 @@
   "analysisWeeksAndDaysOffPartner": "The partner is taking {weeks} entire weeks off, plus on average {days} days per week spread out over {parttimeWeeks} weeks.",
   "analysisChildcare": "This year will require {days} days of external childcare.",
   "analysisTitle": "Analysis",
-  "feedbackHtml": "<h2>Feedback</h2><p>Notice any mistakes? Any other ideas how to improve this further?</p><p>Email me at <a href=\"mailto:thomas{'@'}webvalid.nl\">thomas{'@'}webvalid.nl</a></p><p>If you're a nerd, you can submit a pull request at <a href=\"https://github.com/Thomas-Kuipers/verlofcalculator\">github.com/Thomas-Kuipers/verlofcalculator</a></p>",
+  "feedbackHtml": "<h2>About</h2><p>Verlof Calculator is a Kuipers-Rapberger household project. It helps you make well informed choices about organizing the care work for your baby.</p><p>Verlof Calculator is free, open-source and does not feature advertisements. It does not store your data, nor is it interested in it. Feel free to share.</p><p>Notice any mistakes? Any other ideas how to improve this further?</p><p>Email us at <a href=\"mailto:thomas{'@'}webvalid.nl\">thomas{'@'}webvalid.nl</a></p><p>If you're a nerd, you can submit a pull request at <a href=\"https://github.com/Thomas-Kuipers/verlofcalculator\">github.com/Thomas-Kuipers/verlofcalculator</a></p>",
   "settingsTitle": "Enter your details here",
   "settingsGrossYearlySalaryMom": "Gross yearly salary mom",
   "settingsGrossYearlySalaryPartner": "Gross yearly salary partner",
