--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -63,7 +63,7 @@
   "analysisWeeksAndDaysOffPartner": "De partner neemt {weeks} volledige weken vrij, plus gemiddeld {days} dagen verspreid over {parttimeWeeks} weken.",
   "analysisChildcare": "Dit jaar zijn er {days} dagen kinderopvang nodig.",
   "analysisTitle": "Analyse",
-  "feedbackHtml": "<h2>Feedback</h2><p>Foutje gevonden? Ideeën ter verbetering?</p><p>Email mij op <a href=\"mailto:thomas{'@'}webvalid.nl\">thomas{'@'}webvalid.nl</a></p><p>Voor de nerds: verstuur een pull request op <a href=\"https://github.com/Thomas-Kuipers/verlofcalculator\">github.com/Thomas-Kuipers/verlofcalculator</a></p>",
+  "feedbackHtml": "<h2>Info</h2><p>Verlof Calculator is een Kuipers-Rapberger project. Het helpt je om goed geïnformeerde beslissingen omtrent de zorg voor je baby te nemen.</p><p>Verlof Calculator is gratis, open-source en heeft geen advertenties. Je data wordt niet opgeslagen. Voel je vrij om te delen.</p><p>Foutje gevonden? Ideeën ter verbetering?</p><p>Email ons op <a href=\"mailto:thomas{'@'}webvalid.nl\">thomas{'@'}webvalid.nl</a></p><p>Voor de nerds: verstuur een pull request op <a href=\"https://github.com/Thomas-Kuipers/verlofcalculator\">github.com/Thomas-Kuipers/verlofcalculator</a></p>",
   "settingsTitle": "Vul hier jouw gegevens in",
   "settingsGrossYearlySalaryMom": "Bruto jaarsalaris moeder",
   "settingsGrossYearlySalaryPartner": "Bruto jaarsalaris partner",
