--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -29,7 +29,7 @@
   "regulationBirthInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "regulationAdditionalBirthTitle": "Additional birth leave",
   "regulationAdditionalBirthInfoHtml": "<p>Official title: Aanvullend geboorteverlof</p>",
-  "regulationAdditionalBirthInfoListHtml": "<li>5 Weeks for the partner.</li><li>Paid by UWV, at 70% of your normal salary. It\\'s also capped at 70% of the UWV maximum, so it can never be higher than {seventyPercentOfUwvMax} per day.</li>",
+  "regulationAdditionalBirthInfoListHtml": "<li>5 Weeks for the partner.</li><li>Paid by UWV, at 70% of your normal salary. It\'s also capped at 70% of the UWV maximum, so it can never be higher than {seventyPercentOfUwvMax} per day.</li>",
   "regulationAdditionalBirthInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "regulationPaidParentalTitle": "Paid parental leave",
   "regulationPaidParentalInfoHtml": "<p>Official title: Betaald ouderschapsverlof</p>",
