--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -41,7 +41,7 @@
   "regulationUnpaidParentalInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "payoutNormalAndMissingMom": "Mom gets paid {payoutPerDay} for each of these days. Her normal daily salary is {normalIncomePerDay}, so she misses out on {missedIncomePerDay} per day.",
   "payoutNormalAndMissingPartner": "The partner gets paid {payoutPerDay} for each of these days. Their normal daily salary is {normalIncomePerDay}, so they miss out on {missedIncomePerDay} per day.",
-  "financialTitle": "Financial",
+  "financialTitle": "Missed income",
   "financialThMom": "Mom",
   "financialThPartner": "Partner",
   "financialDaysOffFullyPaid": "Days off fully paid",
@@ -66,6 +66,8 @@
   "settingsTitle": "Enter your details here",
   "settingsGrossYearlySalaryMom": "Gross yearly salary mom",
   "settingsGrossYearlySalaryPartner": "Gross yearly salary partner",
+  "settingsWorkDaysMom": "Normal workdays mom",
+  "settingsWorkDaysPartner": "Normal workdays partner",
   "chartTitle": "Days off comparison",
   "chartDaysMom": "Mom: {days} days off",
   "chartDaysPartner": "Partner: {days} days off",
