--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -41,7 +41,7 @@
   "regulationUnpaidParentalInfoLinkHtml": "<p>Meer info op <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "payoutNormalAndMissingMom": "De moeder krijgt {payoutPerDay} per dag, terwijl ze normaal gesproken {normalIncomePerDay} per dag verdient, dus ze krijgt {missedIncomePerDay} minder per dag.",
   "payoutNormalAndMissingPartner": "De partner krijgt {payoutPerDay} per dag, terwijl hij/zij normaal gesproken {normalIncomePerDay} per dag verdient, dus hij/zij krijgt {missedIncomePerDay} minder per dag.",
-  "financialTitle": "Financieel",
+  "financialTitle": "Misgelopen inkomen",
   "financialThMom": "Moeder",
   "financialThPartner": "Partner",
   "financialGrossYearlySalary": "Bruto jaarsalaris",
@@ -67,6 +67,8 @@
   "settingsTitle": "Vul hier jouw gegevens in",
   "settingsGrossYearlySalaryMom": "Bruto jaarsalaris moeder",
   "settingsGrossYearlySalaryPartner": "Bruto jaarsalaris partner",
+  "settingsWorkDaysMom": "Normale werkdagen moeder",
+  "settingsWorkDaysPartner": "Normale werkdagen partner",
   "chartTitle": "Vrije dagen vergelijking",
   "chartDaysMom": "Moeder: {days} vrije dagen",
   "chartDaysPartner": "Partner: {days} vrije dagen",
