--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -19,24 +19,24 @@
   "regulationsThMom": "Mom",
   "regulationsThPartner": "Partner",
   "regulationsTotalDaysOff": "Total days off",
-  "regulationDeliveryTitle": "Birth leave for mom",
-  "regulationDeliveryInfoHtml": "<p>Official title: Bevallingsverlof</p>",
+  "regulationDeliveryTitle": "Bevallingsverlof",
+  "regulationDeliveryInfoHtml": "",
   "regulationDeliveryInfoListHtml": "<li>For the mom, who has given birth.</li><li>Between 10 and 12 weeks, depending on when you use your zwangerschapsverlof. If you've used 4 weeks zwangerschapsverlof, you get 12 weeks bevallingsverlof. If you've used 5, you get 11. If you've used 6, you get 10. In this calculator, 12 is assumed.</li><li>The first 6 weeks after birth are mandatory to take off. The remaining weeks can be spread out over a period of 30 weeks.</li><li>Paid by UWV, at 100% of your normal salary, but capped at the UWV maximum of {uwvDailyMax} euros per day</li>",
   "regulationDeliveryInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
-  "regulationBirthTitle": "Birth leave for partner",
-  "regulationBirthInfoHtml": "<p>Official title: Geboorteverlof (voor partners)</p>",
+  "regulationBirthTitle": "Geboorteverlof (for partners)",
+  "regulationBirthInfoHtml": "",
   "regulationBirthInfoListHtml": "<li>1 Week for the partner.</li><li>Paid by your employer, at 100% of your normal salary.</li>",
   "regulationBirthInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
-  "regulationAdditionalBirthTitle": "Additional birth leave",
-  "regulationAdditionalBirthInfoHtml": "<p>Official title: Aanvullend geboorteverlof</p>",
+  "regulationAdditionalBirthTitle": "Aanvullend geboorteverlof",
+  "regulationAdditionalBirthInfoHtml": "",
   "regulationAdditionalBirthInfoListHtml": "<li>5 Weeks for the partner.</li><li>Paid by UWV, at 70% of your normal salary. It&#39;s also capped at 70% of the UWV maximum, so it can never be higher than {seventyPercentOfUwvMax} per day.</li>",
   "regulationAdditionalBirthInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
-  "regulationPaidParentalTitle": "Paid parental leave",
-  "regulationPaidParentalInfoHtml": "<p>Official title: Betaald ouderschapsverlof</p>",
+  "regulationPaidParentalTitle": "Betaald ouderschapsverlof",
+  "regulationPaidParentalInfoHtml": "",
   "regulationPaidParentalInfoListHtml": "<li>9 Weeks total.</li><li>Valid for both mom and the partner.</li><li>Paid by UWV, at 70% of your normal salary. It\\'s also capped at 70% of the UWV maximum, so it can never be higher than {seventyPercentOfUwvMax} per day.</li><li>Must be used within 1 year of the birth.</li>",
   "regulationPaidParentalInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
-  "regulationUnpaidParentalTitle": "Unpaid parental leave",
-  "regulationUnpaidParentalInfoHtml": "<p>Official title: Onbetaald ouderschapsverlof</p>",
+  "regulationUnpaidParentalTitle": "Onbetaald ouderschapsverlof",
+  "regulationUnpaidParentalInfoHtml": "",
   "regulationUnpaidParentalInfoListHtml": "<li>'17 Weeks total.</li><li>Valid for both mom and the partner.</li><li>Not paid at all.</li>",
   "regulationUnpaidParentalInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "payoutNormalAndMissingMom": "Mom gets paid {payoutPerDay} for each of these days. Her normal daily salary is {normalIncomePerDay}, so she misses out on {missedIncomePerDay} per day.",
