--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,6 +12,10 @@
   "regulationsThMom": "Mom",
   "regulationsThPartner": "Partner",
   "regulationsTotalDaysOff": "Total days off",
+  "regulationPregnancyTitle": "Zwangerschapsverlof",
+  "regulationPregnancyInfoHtml": "",
+  "regulationPregnancyInfoListHtml": "",
+  "regulationPregnancyInfoLinkHtml": "<p>More info on <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "regulationDeliveryTitle": "Bevallingsverlof",
   "regulationDeliveryInfoHtml": "",
   "regulationDeliveryInfoListHtml": "<li>For the mom, who has given birth.</li><li>Between 10 and 12 weeks, depending on when you use your zwangerschapsverlof. If you've used 4 weeks zwangerschapsverlof, you get 12 weeks bevallingsverlof. If you've used 5, you get 11. If you've used 6, you get 10. In this calculator, 12 is assumed.</li><li>The first 6 weeks after birth are mandatory to take off. The remaining weeks can be spread out over a period of 30 weeks.</li><li>Paid by UWV, at 100% of your normal salary, but capped at the UWV maximum of {uwvDailyMax} euros per day</li>",
