--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -12,6 +12,10 @@
   "regulationsThMom": "Moeder",
   "regulationsThPartner": "Partner",
   "regulationsTotalDaysOff": "Totaal vrije dagen",
+  "regulationPregnancyTitle": "Zwangerschapsverlof",
+  "regulationPregnancyInfoHtml": "",
+  "regulationPregnancyInfoListHtml": "",
+  "regulationPregnancyInfoLinkHtml": "<p>Meer info op <a target=\"_blank\" href=\"{url}\">rijksoverheid.nl</a></p>",
   "regulationDeliveryTitle": "Bevallingsverlof",
   "regulationDeliveryInfoHtml": "",
   "regulationDeliveryInfoListHtml": "<li>Voor de moeder, die net is bevallen.</li><li>Tussen de 10 en 12 weken, afhankelijk van hoeveel zwangerschapsverlof je hebt verbruikt. Als je 4 weken zwangerschapsverlof hebt verbruikt, krijg je 12 weken bevallingsverlof. Bij 5, krijg je 11. Bij 6, krijg je 10. In deze calculator gaan we uit van 12.</li><li>Het is verplicht de eerste 6 weken na de bevalling vrij te nemen. De resterende weken kunnen uitgespreid worden over een periode van 30 weken.</li><li>Betaald door het UWV voor 100% van je normale loon, maar nooit hoger dan het UWV maximum van {uwvDailyMax} per dag.</li>",
